# blockchain

./: .aiexclude  .build_dir_for_make  .gitignore  .last_build_dir  AGENTS.md  CMakeLists.txt  GEMINI.md  Makefile  README.md
.gemini/: Dockerfile  settings.json
.github/actions/cmake-build/: action.yml
.github/actions/sign-and-upload-release/: action.yml
.github/workflows/: _on-pr-fast.yml  build-linux.yml  build-macos-arm64.yml  build-macos-intel.yml  build-windows.yml
cmake/: Boost.cmake  BoostB2.cmake  BoostCmake.cmake  OpenSSL.cmake  Policy.cmake  arch.cmake  run_tests.cmake  sdk.cmake
cmake/libs/: Boost.cmake  BoostCmake.cmake  OpenSSL.cmake
cmake/test_boost_project/: CMakeLists.txt
cmake/utils/: bootstrap.cmake  configure.cmake  help.cmake
contrib/db/libmdbx/: CMakeLists.txt
contrib/db/libmdbx/cmake/: utils.cmake
src/: CMakeLists.txt
